force-app/main/default/objects/Case/fields/Agent_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agent_Feedback_Comments__c</fullName>
    <description>Additional feedback and comments from the agent.</description>
    <label>Agent Feedback Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>