force-app/main/default/objects/Case/fields/AI_Predicted_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Predicted_Category__c</fullName>
    <description>Category of the ticket predicted by Einstein Case Classification.</description>
    <label>AI Predicted Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <label>Billing &amp; Payments</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <label>Technical Support</label>
            </value>
            <value>
                <fullName>Account</fullName>
                <label>Account Management</label>
            </value>
            <value>
                <fullName>General</fullName>
                <label>General Inquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>