force-app/main/default/objects/Case/fields/AI_Response_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the agent actually used the recommended response or action.</description>
    <label>AI Response Used</label>
    <type>Checkbox</type>
</CustomField>