force-app/main/default/objects/Case/fields/Einstein_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Sentiment__c</fullName>
    <description>Sentiment of the case subject/description detected by Einstein AI.</description>
    <label>Einstein Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>