force-app/main/default/objects/Case/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <description>Deadline computed based on Priority SLA rules.</description>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>