force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <description>Status of the SLA tracking.</description>
    <formula>IF(IsClosed, &quot;Closed&quot;, IF(NOW() &gt; SLA_Deadline__c, &quot;Breached&quot;, IF((SLA_Deadline__c - NOW()) * 24 &lt; 2, &quot;Warning&quot;, &quot;Within SLA&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>